Oct 21, 2021
  apache log analyzer alpha: optimized code to produce

Oct 20, 2021
  alpha version of apache log analyzer

Oct 14, 2021
  refactored code to use gradle

Mar 26, 2016
  Telize IP Geolocation service was discontinued last year, so we cannot use it anymore.
  Instead, we use public database from www.maxmind.com:

  http://dev.maxmind.com/geoip/legacy/geolite/#Downloads

