@@ -27,8 +27,8 @@ dependencies {
 	compile 'org.jsoup:jsoup:1.6.3'
     compile 'log4j:log4j:1.2.17'
     compile 'com.oracle.ojdbc:ojdbc8:19.3.0.0'
-    compile 'org.springframework:spring-beans:5.3.2'
-    compile 'org.springframework:spring-jdbc:5.3.2'
+    compile 'org.springframework:spring-beans:5.3.3'
+    compile 'org.springframework:spring-jdbc:5.3.3'
     compile 'com.io7m.xom:xom:1.2.10'
 
     compile fileTree(dir: 'lib', include: '*.jar')
